# home_iot

./: DockerStack.drawio  LICENSE  README.md  configuration.yaml  nodemcu_sketch.c
arduino_sketches/: trigger_relais_via_wifi.c
arduino_sketches/micropy/: boot.py  main.py
arduino_sketches/micropy_mqtt_relais_on_off/: boot.py  main.py
cpp_stuff/: CMakeLists.txt  main.cpp
cpp_stuff/include/: Table.h
cpp_stuff/src/: Table.cpp  main.cpp
datarchiver/sort_pics/: config.yaml  requirements.txt  sort_data.py  tag_pics.txt
docker_install_and_remove/: rm_dockeer.sh
home_assisstant/: configuration.yaml  docker-compose.yml  docker_run_cmd.txt  lovelace_gui.txt
home_assisstant/raspi/: docker-compose.yml
home_assisstant/ubuntu/: docker-compose.yml
jenkins/: Dockerfile  docker-compose.yml  pipeline.txt  plugins.txt  run_junks_docker.txt
megasync/: docker-compose.yml  exec_compose.sh
my_piprojects/: .pir2.py.swp  led_blink_gpio14.py  led_blink_gpio15.py  pir2.py  tones.py
nextcloud/: README.md  docker-compose.yml
portainer/raspi/: docker-compose.yml
portainer/ubuntu/: docker-compose.yml
ros/devel/: .catkin  local_setup.sh
sort_pics/: Dockerfile  README.md  requirements.txt  sort_data.py
syncthing/raspi/: docker-compose.yml
syncthing/ubuntu/: docker-compose.yml
udacity_robotics/myrobot/: CMakeLists.txt
udemy_cpp/: first_test.cpp
udemy_cpp/file_streams/: file_streams  file_streams.cpp
udemy_crypto/: RivestShamirAdleman.py  cesar_cipher.py  frequency_analysis.py  one_time_pad.py  permutations.py  substitution_cipher.py  xor.py
(+35 files in other folders)
